Wed Apr 30 20:11:36 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/net/telnet.rb:  Fixing a bug where line endings would not be properly
	  escaped when the two character ending was broken up into separate TCP
	  packets.  Issue reported and patched by Brian Candler.

Wed Apr 30 18:03:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_load_path), vm_core.h (rb_vm_t): moved to VM.

	* load.c (rb_get_load_path): returns absolute load path.

	* load.c (load_path_getter): $LOAD_PATH getter.

	* file.c (rb_find_file_ext, rb_find_file), ruby.c (push_include,
	  ruby_init_loadpath): use the accessor.

	* vm.c (rb_vm_mark): mark load_path.

Wed Apr 30 17:47:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_search): use local variable.  a patch from wanabe
	  <s.wanabe AT gmail.com> in [ruby-dev:34537].  [ruby-dev:34492]

Wed Apr 30 16:10:18 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h: speficy the values of the enumeration constants
	  explicitly.  [ruby-dev:34489]

Wed Apr 30 12:32:39 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_redirect_fd): prohibit duplex IO.
	  (check_exec_fds): record maxhint even if close_others is not
	  specified.
	  (rb_exec_arg_fixup): renamed from rb_exec_arg_fix.

Mon Apr 28 20:24:27 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_marshal_load): checks the given
	  denominator. [ruby-dev:34536]

Mon Apr 28 14:21:18 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (POSFIXABLE): use FIXNUM_MAX+1 instead of
	  FIXNUM_MAX to make it possible to convert to double accurately on
	  environments with 64bit VALUE and 64bit double.
	  It assumes FLT_RADIX is 2.
	  fix RubyForge bug #14102.

Mon Apr 28 12:48:57 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (rb_exec_arg_addopt, rb_exec_arg_addopt): now can specify
	  close_exec on having no fork environment (but still meaningless).

Mon Apr 28 11:11:29 2008  Tanaka Akira  <akr@fsij.org>
