@@ -1,3 +1,10 @@
+Wed Apr 30 21:36:40 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
+
+	* lib/erb.rb (url_encode): [ruby-dev:34497] ERB::Util#url_encode
+	  bug fix. Reported by rubikitch.
+
+	* test/erb/test_erb.rb: ditto
+
 Wed Apr 30 20:11:36 2008  James Edward Gray II  <jeg2@ruby-lang.org>
 
 	* lib/net/telnet.rb:  Fixing a bug where line endings would not be properly
